PermissionUtil::GetPermissionType needs to handle MIDI

After the recent PermissionManager's change, it calls
GetPermissionType even for CONTENT_SETTING_TYPE_MIDI.

BUG=697771

Review-Url: https://codereview.chromium.org/2730693002
Cr-Commit-Position: refs/heads/master@{#454231}

Former-commit-id: b0d271768d0a592227d753f4cf60399c4dd2af4f